--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dan's Clicker</title>
+  <title id=clicktotaltitle>The Big Clicker</title>
   <link href="clickerstyle.css" type="text/css" rel="stylesheet">
+  <script src="clickscripts.js"></script>
+  <script src="jquery-3.4.1.js"></script>
   <link rel="icon" href="favicon.png" type="image/png" />
 </head>
 <body>
   <div id=titlebar>
-  <h1>Dan's Big Clicker</h1>
+  <h1 id="playertitle"></h1>
 </div>
   <div id="buttonzone">
   <button type="button" id="herobutton" onclick="increment()">CLICK</button>
@@ -18,33 +20,16 @@
 <div id="upgradezone">
   <div id=playerinfo>
   <h3 id=playerlevel></h3>
-  </div>
-<button type="button" id="upbutton" onclick="upgrade()">Increase Power Level</button>
+  <h3 id=clickeramount></h3>
 </div>
-<script src="jquery-3.4.1.js"></script>
-<script>
-
-var i = 0;
-var powerLevel = 1;
-var upgradeCost = 100;
-
-function increment(){
-  i += (1*powerLevel);
-  document.getElementById("bigcounter").innerHTML=i;
-}
-
-function upgrade(){
-  if (i>=upgradeCost){
-    document.getElementById("bigcounter").innerHTML= i -= upgradeCost;
-    powerLevel += 1;
-    upgradeCost = upgradeCost*2;
-    document.getElementById("playerlevel").innerHTML= "Power Level: " + powerLevel;
-  }
-  else {
-    alert("You need " + upgradeCost + " points to increase your Power Level!")
-  }
-}
-
-</script>
+<div id=powerbutton class= "tooltip">
+<button type="button" id="upbutton" onclick="upgrade()">Increase Power Level</button>
+<span class="tooltiptext" id="powerBuy"></span>
+</div>
+<div id= friendbutton class= "tooltip">
+<button type="button" id="clickerbutton" onclick="buyClicker()">Enlist Invisible Clicker</button>
+<span class="tooltiptext" id="friendBuy"></span>
+</div>
+</div>
 </body>
 </html>
