--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <div id=playerinfo>
   <h3 id=playerlevel></h3>
   <h3 id=clickeramount></h3>
+  <div id="clickerindication">
+  </div>
 </div>
 <div id=powerbutton class= "tooltip">
 <button type="button" id="upbutton" onclick="upgrade()">Increase Power Level</button>
