--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
   <div id="buttonzone">
   <button type="button" id="herobutton" onclick="increment()">CLICK</button>
 </div>
-<div id="counter">
-  <h2 id="bigcounter"></h2>
-</div>
 <div id="upgradezone">
   <div id=playerinfo>
-  <h3 id=playerlevel></h3>
-  <h3 id=clickeramount></h3>
+  <h3 id=playerlevel>Power Level: 1</h3>
+  <h3 id=clickeramount>Invisible Clickers: 0</h3>
   <div id="clickerindication">
   </div>
 </div>
