--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 <div id= friendbutton class= "tooltip">
 <button type="button" id="clickerbutton" onclick="buyClicker()">Enlist Invisible Clicker</button>
 <span class="tooltiptext" id="friendBuy"></span>
+<div id=achievements>
+  <h3 id=achievmentcounter>Achievements Unlocked: 0/3</h3>
+</div>
 </div>
 </div>
 </body>
