--- a/index.html
+++ b/index.html
@@ -26,17 +26,26 @@
 <button type="button" id="clickerbutton" onclick="buyClicker()">Enlist Invisible Clicker</button>
 <span class="tooltiptext" id="friendBuy"></span>
 </div>
+<div id= tripplebutton class= "tooltip">
+<button type="button" id="multibutton" onclick="multiplier()">30 Second Power Trippler</button>
+<span class="tooltiptext" id="multiBuy"></span>
+</div>
 </div>
 <div id=achievements>
-  <h3 id=achievmentcounter>Achievements Unlocked: 0/3</h3>
-  <h4 id=poweracheivement>Reach a Power Level of 20.</h3>
-  <h4 id=clickeracheivement>Enlist 20 Invisible Clickers.</h3>
-  <h4 id=pointsacheivement>Reach 100,000 points.</h3>
+  <h3 id=achievmentcounter>Achievements Unlocked: 0/4</h4>
+  <h4 id=poweracheivement class="acheivementweight">Reach a Power Level of 20.</h4>
+  <h4 id=clickeracheivement class="acheivementweight">Enlist 20 Invisible Clickers.</h4>
+  <h4 id=pointsacheivement class="acheivementweight">Reach 100,000 points.</h4>
+  <h4 id=clicksacheivement class="acheivementweight">Reach 10,000 total clicks.</h4>
 </div>
 <div id=legacy>
-  <h3>All Time Stats</h3>
+  <h3>Legacy Stats</h3>
   <h4 id=clicksmade>You haven't clicked yet!</h4>
   <h4 id=timeplayed>You've played 0 minutes.</h4>
+  <div id=easteregg class= "tooltip">
+  <h4 id=startbonus>You did not get a starting bonus.</h4>
+  <span class="tooltiptext">Special names earn you starting bonuses. Try finding them.</span>
+  </div>
 </div>
 </div>
 </body>
