--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="favicon.png" type="image/png" />
 </head>
 <body>
-  <div id="gridcontainer">
+  <div id="gridcontainer" class="disable-dbl-tap-zoom">
   <div id="buttonzone">
   <button type="button" id="herobutton" onclick="increment()">CLICK</button>
 </div>
