--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="clickerstyle.css" type="text/css" rel="stylesheet">
   <script src="clickscripts.js"></script>
   <script src="jquery-3.4.1.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon.png" type="image/png" />
 </head>
 <body>
