--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <h4 id=totalpointsacheivement class="acheivementweight">Reach 500000 points all-time.</h4>
 </div>
 <div id=legacy>
-  <h3>Legacy Stats</h3>
+  <h3>Game Stats</h3>
   <h4 id=totalpoints>You don't have any points yet!</h4>
   <h4 id=clicksmade>You haven't clicked yet!</h4>
   <h4 id=timeplayed>You've played 0 minutes.</h4>
